Fix center-aligned tooltip arrow.

--- a/css/themes/dirtdiglett/include/_previews.scss
+++ b/css/themes/dirtdiglett/include/_previews.scss
@@ -48,6 +48,7 @@
     position: absolute;
     overflow: hidden;
     border: 0;
+    margin-left: -2.5rem;
 
     &::after {
       content: "";
